<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/hello_world" 
        android:layout_alignParentTop="true"
        android:textSize="@dimen/font_size"
        android:textStyle="bold"/>
    
    <ScrollView android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_main" />
    </ScrollView>
    
    <Button android:id="@+id/button1"
          android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/getincidents" 
        android:layout_alignParentBottom="true"/>

</RelativeLayout>