<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >
    

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" 
        android:layout_alignParentTop="true"/>
    
    
    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/username"
        />
    
     <EditText android:id="@+id/usernameedit"
       android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:inputType="textEmailAddress" 
        android:layout_below="@+id/username"/>
    
    
    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/password" 
        android:layout_below="@+id/usernameedit"/>
    
    
    <EditText android:id="@+id/passwordedit"
       android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/password"
        android:inputType="textPassword" />
    
     <Button android:id="@+id/button1"
          android:layout_width="96dp"
        android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/btnLogin" 
        android:layout_below="@+id/passwordedit"
        android:onClick="validate"/>
     
      <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignParentBottom="true"
        android:textColor="#F00"
        />

</RelativeLayout>
